# ocaml-magic

./: .depend  .gitignore  INSTALL  META  Makefile  Makefile.conf  Makefile.config  Makefile.in  README  README.md  bootstrap  configure  configure.ac  file.ml  magic.ml  magic.mli  magic.opam  magic.opam.in  magic_stub.c  opam
examples/: .cvsignore  Makefile.file.in  Makefile.in  file.ml  test.ml
src/: .cvsignore  META.in  Makefile.in  magic.ml  magic.mli  magic_stub.c  magic_stubs.c
