opam-version: "2.0"
version: "0.7.3"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler <Christophe.Troestler@umons.ac.be>" ]
license: "GPL-3.0-or-later WITH OCaml-LGPL-linking-exception"
synopsis: "Bindings to libmagic"
homepage: "https://github.com/Chris00/ocaml-magic"
dev-repo: "git+https://github.com/Chris00/ocaml-magic.git"
bug-reports: "https://github.com/Chris00/ocaml-magic/issues"
build: [
  ["./configure"]
  [make]
]
install: [make "install"]
remove: [
  ["ocamlfind" "remove" "magic"]
]
depends: [
  "ocamlfind" {build}
]
depexts: [
  [ [ "debian"  ] [ "libmagic-dev" ] ]
  [ [ "ubuntu"  ] [ "libmagic-dev" ] ]
]
