opam-version: "2.0"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler <Christophe.Troestler@umons.ac.be>" ]
license: "GPL-3.0-or-later WITH OCaml-LGPL-linking-exception"
synopsis: "Bindings to libmagic"
homepage: "https://github.com/Chris00/ocaml-magic"
dev-repo: "git+https://github.com/Chris00/ocaml-magic.git"
bug-reports: "https://github.com/Chris00/ocaml-magic/issues"
build: [
  ["./configure"]
  [make]
]
install: [make "install"]
depends: [
  "ocamlfind" {build}
]
depexts: [
  ["libmagic-dev"] {os-family = "debian"}
  ["file-devel"] {os-distribution = "centos"}
  ["file-devel"] {os-distribution = "fedora"}
  ["file-devel"] {os-family = "suse" | os-family = "opensuse"}
  ["file-dev"] {os-family = "alpine"}
  ["file"] {os-family = "arch"}
  ["libmagic-devel"] {os-distribution = "mageia"}
  ["file"] {os = "freebsd"}
  ["file"] {os = "openbsd"}
  ["libmagic"] {os = "macos" & os-distribution = "homebrew"}
]
available: [ os != "win32" & os != "macos" ]
